LDEV-3962 changing labels

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 05 23:21:24 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Feb 24 19:31:56 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -57,8 +57,6 @@ error.releasemarks.fail  =Mark release failed, please contact your system admini
 error.markhigher  =Mark must be lower than maximum mark.
 error.cellsave  =Problem saving cell content, please contact your system administrator.
 label.error  =Error
-gradebook.export.excel.1  =Export
-gradebook.export.excel.2  =grades
 gradebook.export.activity  =Activity
 gradebook.export.activities  =Activities
 gradebook.export.outputs  =Outputs
@@ -86,8 +84,6 @@ gradebook.coursemonitor.wait  =Please wait...
 gradebook.exportcourse.current.activity  =Current activity: {0}
 gradebook.gridtitle.lesson.view  =Lesson View
 gradebook.gridtitle.learner.view  =Grades by  learner
-label.select  =Select
-label.lessons.to.export  =lessons to export.
 label.button.export  =Export
 label.lessons  =Lessons
 label.group  =Group
@@ -106,6 +102,8 @@ button.help  =Help
 button.help.tooltip  =Open help
 gradebook.monitor.show.dates  =Show dates
 gradebook.monitor.hide.dates  =Hide dates
+gradebook.export.excel  =Export grades
+label.select.lessons.to.export  =Select lessons to export
 
 
-#======= End labels: Exported 100 labels for en AU =====
+#======= End labels: Exported 98 labels for en AU =====
