--- a/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 05 23:23:13 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Feb 24 19:32:01 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -57,8 +57,6 @@ error.releasemarks.fail  =Ha ocurrido un error. Por favor contacte a su administ
 error.markhigher  =La nota debe ser menor a la calificaci\u00f3n m\u00e1xima
 error.cellsave  =Ha ocurrido un error al tratar de guardar el contenido de la celda. Por favor contacte a su administrador de sistema
 label.error  =Error
-gradebook.export.excel.1  =Exportar
-gradebook.export.excel.2  =calificaciones a una hoja de c\u00e1lculo
 gradebook.export.activity  =Actividad
 gradebook.export.activities  =Actividades
 gradebook.export.outputs  =Resultados
@@ -86,8 +84,6 @@ gradebook.coursemonitor.wait  =Por favor espere ...
 gradebook.exportcourse.current.activity  =Actividad actual: {0}
 gradebook.gridtitle.lesson.view  =Lecci\u00f3n
 gradebook.gridtitle.learner.view  =Estudiantes
-label.select  =Seleccionar
-label.lessons.to.export  =lecciones a exportar.
 label.button.export  =Exportar
 label.lessons  =Lecciones
 label.group  =Grupo
@@ -106,6 +102,8 @@ button.help  =Ayuda
 button.help.tooltip  =Abrir ayuda
 gradebook.monitor.show.dates  =Mostrar fechas
 gradebook.monitor.hide.dates  =Esconder fechas
+gradebook.export.excel  =Exportar calificaciones
+label.select.lessons.to.export  =Seleccione lecciones a exportar
 
 
-#======= End labels: Exported 100 labels for es ES =====
+#======= End labels: Exported 98 labels for es ES =====
