--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources.properties
@@ -104,6 +104,8 @@ button.submit  =Finish
 message.no.reflection.available  =No notebook entry has been added.
 label.image.options  =Image options
 label.activity.completion  =End of activity
+errors.maxfilesize  =Uploaded file exceeded maximum size of {0}
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 
 #======= End labels: Exported 98 labels for en AU =====
