LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Using new tags and the shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -241,6 +241,7 @@ error.min.rate.less.max  =The maximum number of ratings  must be greater than it
 js.error.validate.posting.number  =There is an error with the minimum and/or maximum set for postings. Please check and try again.
 js.error.validate.reply.number  =There is an error with the minimum and/or maximum number of posts per thread.
 label.topics  =Topics
+label.authoring.basic.resource.file.input  =File
 
 
 #======= End labels: Exported 236 labels for en AU =====
