LDEV-4240: Making the import question widget look consistent with the import QTI widget. Also added validation on front end to check that the file is an XML file.

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -241,6 +241,7 @@ authoring.title.import  =Import questions
 authoring.import.instruction  =Please choose questions to import.
 button.select.importfile  =Select file to import
 msg.import.file.format  =The import file must be .xml file exported from assessment tool.
+error.import.file.format  =The import file is not an .xml file.
 label.import.file  =Import xml file
 button.import  =Import
 label.authoring.basic.import.questions  =Import
