LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Using new tags and the shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_tool_daco/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources.properties
@@ -252,6 +252,9 @@ label.search  =Search...
 label.monitoring.average.number.records.heading  =Average Number of Records
 label.activity.completion  =End of activity
 label.notifications  =Notifications
-
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.executable  =Uploaded file is executable
+error.attachment.must.be.image  =Allowed file formats: JPG, GIF or PNG.
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 #======= End labels: Exported 246 labels for en AU =====
