LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Using new tags and the shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_tool_images/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources.properties
@@ -166,7 +166,8 @@ label.submit  =Finish
 label.posted.by  ={0} on {1}
 label.image.options  =Image options
 label.activity.completion  =End of activity
-errors.maxfilesize  =Image exceeds maximum file size
+errors.maxfilesize  =Image exceeds maximum file size {0}
+label.upload.info  =Uploaded file must not exceed size of {0}
 label.rating.criterias  =Rating criterias
 label.add.criteria  =Add criteria
 label.number.of.votes  ={0} / {1} votes
