--- a/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
@@ -166,7 +166,8 @@ label.submit  =Finish
 label.posted.by  ={0} on {1}
 label.image.options  =Image options
 label.activity.completion  =End of activity
-errors.maxfilesize  =Image exceeds maximum file size
+errors.maxfilesize  =Image exceeds maximum file size {0}
+label.upload.info  =Uploaded file must not exceed size of {0}
 label.rating.criterias  =Rating criterias
 label.add.criteria  =Add criteria
 label.number.of.votes  ={0} / {1} votes
