--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -136,8 +136,9 @@ button.close  =Close
 message.step.of  =Step {0} of {1}
 message.no.reflection.available  =No notebook available
 button.edit  =Edit
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
-error.attachment.executable  =The uploaded file is executable, please zip it before uploading.
+errors.maxfilesize=Uploaded file exceeded maximum size of {0}
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
+error.attachment.executable  =The uploaded file can not be an executable.
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity\u201d, if you come back to this Share Resource, you won\u2019t be able to share new resources.
 message.activityLocked  =The instructor has set this activity not to allow you to view or share any more resources after you have finished it.
