LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Using new tags and the shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
@@ -39,7 +39,6 @@ label.learner.dateMarksReleased  =Date marks released
 label.learner.notAvailable  =Not available
 label.learner.noUpload  =No files have been uploaded yet.
 label.learner.uploadMessage  =Uploaded file must not be executable and not exceed size of {0}
-errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 learner.finish.without.upload  =No files have been uploaded yet. Files can not be uploaded once you choose OK.
 label.monitoring.heading  =Monitoring
 label.monitoring.heading.userlist  =Summary
@@ -101,7 +100,7 @@ message.left.upload.limit  =You could upload another {0} file(s).
 messsage.learner.finish.confirm  =Are you going to finish submission?
 label.edit  =Edit
 message.no.reflection.available  =No Notebook available
-error.attachment.executable  =The uploaded file is executable, please zip it before uploading.
+error.attachment.executable  =The uploaded file can not be an executable
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Submit Files, you won't be able to continue adding files.
 message.activityLocked  =The instructor has set this activity not to allow submissions after you have finished it. As you are returning to this activity, you are able to see your files but not allowed to add more.
@@ -157,6 +156,6 @@ audit.file.restore  =Instructor {0} restored file {1} uploaded by learner {2}.
 label.search  =Search...
 errors.required  ={0} is required.
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+label.add=Add
 
-
-#======= End labels: Exported 150 labels for en AU =====
+#======= End labels: Exported 149 labels for en AU =====
