LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Using new tags and the shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_tool_task/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_en_AU.properties
@@ -40,7 +40,7 @@ label.authoring.basic.resource.edit  =Edit
 label.authoring.basic.resource.delete  =Delete
 label.authoring.basic.resource.title.input  =Title
 label.authoring.basic.resource.description.input  =Description
-label.authoring.choosefile.button  =Choose file
+label.authoring.choosefile.button  =File
 label.authoring.advance.allow.contribute.tasks  =Allow Learners to contribute tasks
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.advance.monitor.verification.required  =Monitor needs to verify these tasks before letting Learners to complete activity
