--- a/lams_tool_task/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources.properties
@@ -40,7 +40,7 @@ label.authoring.basic.resource.edit  =Edit
 label.authoring.basic.resource.delete  =Delete
 label.authoring.basic.resource.title.input  =Title
 label.authoring.basic.resource.description.input  =Description
-label.authoring.choosefile.button  =Choose file
+label.authoring.choosefile.button  =File
 label.authoring.advance.allow.contribute.tasks  =Allow Learners to contribute tasks
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.advance.monitor.verification.required  =Monitor needs to verify these tasks before letting Learners to complete activity
@@ -167,7 +167,8 @@ label.download  =Download
 label.confirm  =Confirm
 label.task.options  =Task options
 label.activity.completion  =End of activity
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes.
-
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.executable  =Uploaded file is executable
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 #======= End labels: Exported 162 labels for en AU =====
