--- a/lams_tool_imscc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources.properties
@@ -131,6 +131,9 @@ label.submit  =Finish
 label.monitoring.heading  =Common Cartridge Monitoring
 label.resource.options  =Resource options
 label.activity.completion  =End of activity
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.executable  =Uploaded file is executable
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 
 #======= End labels: Exported 125 labels for en AU =====
