LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Updating the QTI Import to use the new code.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -737,6 +737,9 @@ tour.lesson.remove.title  =Remove Lesson
 tour.lesson.remove.content  =Remove the lesson completely. This is permanent - it cannot be undone.
 tour.end.title  =End Of Tour
 tour.end.content  =Thank you for taking the tour. To restart the tour, click the Tour button again.
-
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.executable  =Uploaded file is executable
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
+label.file=File
 
 #======= End labels: Exported 731 labels for en AU =====
