LDEV-4237: Include label informing the max size file LDEV-4241: File upload validation LDEV-4240: Consistent upload widget Using new tags and the shared javascript code to create consistency across tools for the look and validation behaviour of file upload.

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -240,7 +240,8 @@ authoring.import.result  =Import tool content result
 authoring.title.import  =Import questions
 authoring.import.instruction  =Please choose questions to import.
 button.select.importfile  =Select file to import
-msg.import.file.format  =The import file must be .xml file exported from assessment tool.
+msg.import.file.format  =The import file must be .xml file exported from assessment tool and not exceed size of {0}
+error.import.file.format  =The import file is not an .xml file.
 label.import.file  =Import xml file
 button.import  =Import
 label.authoring.basic.import.questions  =Import
@@ -296,6 +297,6 @@ output.desc.average.score  =Average score
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he/she commences it.
 label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader finishes the activity.
 warn.mark.hedging.wrong.justification  =Justification cannot be left blank
-
-
+label.file=File
+errors.maxfilesize=File exceeds maximum file size {0}
 #======= End labels: Exported 290 labels for en AU =====
