LDEV-4054 Updating greek

--- a/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 01 23:54:04 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -12,16 +12,12 @@ activity.helptext  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03a3\u03c
 tool.display.name  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2 (forum)
 tool.description  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03b3\u03b9\u03b1 \u03c3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 (forum), \u03b5\u03c0\u03af\u03c3\u03b7\u03c2 \u03b3\u03bd\u03c9\u03c3\u03c4\u03cc \u03ba\u03b1\u03b9 \u03c3\u03b1\u03bd \u03c0\u03af\u03bd\u03b1\u03ba\u03b1\u03c2 \u03bc\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd
 label.authoring.heading.basic  =\u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7
-label.authoring.heading.basic.desc  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ad\u03c2 \u03c0\u03bb\u03b7\u03c1\u03bf\u03c6\u03bf\u03c1\u03af\u03b5\u03c2 \u03b5\u03b9\u03c3\u03cc\u03b4\u03bf\u03c5 \u03b3\u03b9\u03b1 \u03c3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7
-label.authoring.heading.advance.desc  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c4\u03b9\u03c2 \u03c0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b7 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7
 label.authoring.create.new.topic  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03bd\u03ad\u03bf\u03c5 \u03b8\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2
 label.authoring.basic.title  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2
 label.authoring.basic.instruction  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 label.authoring.advance.lock.on.finished  =\u039d\u03b1 \u03ba\u03bb\u03b5\u03b9\u03b4\u03c9\u03b8\u03b5\u03af \u03cc\u03c4\u03b1\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03c9\u03b8\u03b5\u03af
 label.authoring.save.button  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 label.authoring.cancel.button  =\u0386\u03ba\u03c5\u03c1\u03bf
-label.authoring.online.filelist  =\u039b\u03af\u03c3\u03c4\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd \u03b3\u03b9\u03b1 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-label.authoring.offline.filelist  =\u039b\u03af\u03c3\u03c4\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd \u03b3\u03b9\u03b1  \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 label.authoring.advance.allow.edit  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2 \u03bd\u03b1 \u03b1\u03bb\u03bb\u03ac\u03b6\u03bf\u03c5\u03bd \u03c4\u03b9\u03c2 \u03ba\u03b1\u03c4\u03b1\u03c7\u03c9\u03c1\u03ae\u03c3\u03b5\u03b9\u03c2 \u03c4\u03bf\u03c5\u03c2
 label.authoring.advance.use.richeditor  =\u0395\u03b9\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2 \u03bd\u03b1 \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03bf\u03cd\u03bd \u03b5\u03bc\u03c0\u03bb\u03bf\u03c5\u03c4\u03b9\u03c3\u03bc\u03ad\u03bd\u03bf \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03c4\u03ae \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
 label.authoring.advance.limited.input  =\u03a0\u03b5\u03c1\u03b9\u03bf\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2 \u03c3\u03c4\u03b7\u03bd \u03b5\u03b9\u03c3\u03b1\u03b3\u03c9\u03b3\u03ae \u03c7\u03b1\u03c1\u03b1\u03ba\u03c4\u03ae\u03c1\u03c9\u03bd
@@ -36,7 +32,6 @@ lable.topic.subject.by  =\u0391\u03c0\u03cc
 label.back.to.forum  =\u03a0\u03af\u03c3\u03c9 \u03c3\u03c4\u03b7  \u0391\u03c1\u03c7\u03ae \u03c4\u03b7\u03c2 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2
 lable.topic.title.message.number  =# \u03b1\u03c0\u03cc \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03b1
 lable.topic.title.average.mark  =\u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd
-authoring.exception  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c0\u03c1\u03cc\u03b2\u03bb\u03b7\u03bc\u03b1 \u03c3\u03c4\u03b7\u03bd \u03c3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae\u03c2 \u03c4\u03b7\u03c2 "\u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2" \u03ba\u03b1\u03b9 \u03b7 \u03b1\u03b9\u03c4\u03af\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 {0}
 page.title.monitoring.content.userlist  =\u03a3\u03cd\u03bd\u03bf\u03c8\u03b7
 page.title.monitoring.view.user.mark  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
 page.title.monitoring.edit.user.mark  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
@@ -51,16 +46,10 @@ label.monitoring.edit.activity.update  =\u0395\u03bd\u03b7\u03bc\u03ad\u03c1\u03
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 label.monitoring.statistic.average.mark  =\u039c\u03ad\u03c3\u03bf\u03c2 \u03cc\u03c1\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1\u03c2
 lable.monitoring.statistic.total.message  =# \u03b1\u03c0\u03cc \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf \u03bc\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd
-message.monitoring.edit.activity.not.editable  =\u0391\u03c5\u03c4\u03ae \u03b7 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c0\u03bb\u03ad\u03bf\u03bd \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03ac\u03c3\u03b9\u03bc\u03b7
-errors.header  =\u039b\u03ac\u03b8\u03bf\u03c2 \u03c3\u03c4\u03bf\u03bd \u03c4\u03af\u03c4\u03bb\u03bf.
-errors.footer  =\u039b\u03ac\u03b8\u03bf\u03c2 \u03c3\u03c4\u03bf \u03c3\u03ce\u03bc\u03b1 \u03c4\u03bf\u03c5 \u03b8\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2
 error.valueReqd  =\u0391\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03a4\u03b9\u03bc\u03ae
-error.inputFileTooLarge  =\u03a4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03c0\u03bf\u03c5 \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03b5\u03af\u03bd\u03b1\u03b9 \u03c0\u03bf\u03bb\u03cd \u03bc\u03b5\u03b3\u03ac\u03bb\u03bf !.
 error.mark.needNumber  =\u039f \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03bd\u03b1\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2
 error.mark.invalid.number  =\u039f \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03ad\u03c7\u03b5\u03b9  \u03c3\u03b5 \u03bc\u03ae \u03ad\u03b3\u03ba\u03c5\u03c1\u03b7 \u03b1\u03c1\u03b9\u03b8\u03bc\u03b7\u03c4\u03b9\u03ba\u03ae \u03bc\u03bf\u03c1\u03c6\u03ae
-error.fail.get.forum  =H \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 (Forum) \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03b7
 error.title.empty  =\u039f \u03a4\u03af\u03c4\u03bb\u03bf\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc\u03c2
-message.msg.maxFileSize  =\u039c\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf 250\u039a
 title.messageTopic.open  =\u039b\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2 \u0398\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2
 title.message.add  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2
 title.message.open  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2
@@ -238,6 +227,21 @@ label.number.of.replies  =\u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9
 message.no.reflection.available  =\u039a\u03b1\u03bc\u03af\u03b1 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03c0\u03c1\u03bf\u03c3\u03c4\u03b5\u03b8\u03b5\u03af \u03c3\u03c4\u03bf \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf
 label.show.more.messages  =\u03a0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b1 \u03bc\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03b1
 label.loading.messages  =\u03a6\u03cc\u03c1\u03c4\u03c9\u03c3\u03b7 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03c9\u03bd \u03bc\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd
+label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
+label.show.replies  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
+label.hide.replies  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
+label.showhide.prompt  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 / \u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
+message.complete.or.cancel.reply  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce, \u03c3\u03c5\u03bc\u03c0\u03bb\u03ae\u03c1\u03c9\u03c3\u03b5 \u03ae \u03b1\u03ba\u03c5\u03c1\u03ce\u03c3\u03b5\u03c4\u03b5 \u03c4\u03b7\u03bd \u03c4\u03c1\u03ad\u03c7\u03bf\u03c5\u03c3\u03b1 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7 \u03c0\u03c1\u03b9\u03bd \u03be\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03c4\u03b5 \u03bc\u03b9\u03b1 \u03bd\u03ad\u03b1 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7.
+message.complete.or.cancel.edit  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce, \u03c3\u03c5\u03bc\u03c0\u03bb\u03ae\u03c1\u03c9\u03c3\u03b5 \u03ae \u03b1\u03ba\u03c5\u03c1\u03ce\u03c3\u03b5\u03c4\u03b5 \u03c4\u03b7\u03bd \u03c4\u03c1\u03ad\u03c7\u03bf\u03c5\u03c3\u03b1 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03c0\u03c1\u03b9\u03bd \u03b1\u03c0\u03cc \u03c4\u03b7\u03bd \u03ad\u03bd\u03b1\u03c1\u03be\u03b7 \u03bc\u03b9\u03b1\u03c2 \u03bd\u03ad\u03b1\u03c2 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1\u03c2.
+error.cannot.redisplay.please.refresh  =\u039f\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03c3\u03b1\u03c2 \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03c4\u03b5\u03af, \u03b1\u03bb\u03bb\u03ac \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03c0\u03b1\u03bd\u03b5\u03bc\u03c6\u03b1\u03bd\u03b9\u03c3\u03b8\u03bf\u03cd\u03bd. \u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u0391\u03bd\u03b1\u03bd\u03ad\u03c9\u03c3\u03b7 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03bb\u03ac\u03b2\u03b5\u03c4\u03b5 \u03b5\u03ba \u03bd\u03ad\u03bf\u03c5 \u03c4\u03b1 \u03bc\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03b1 \u03c4\u03bf\u03c5 \u03c6\u03cc\u03c1\u03bf\u03c5\u03bc.
+label.posting.options  =\u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b4\u03b7\u03bc\u03bf\u03c3\u03af\u03b5\u03c5\u03c3\u03b7\u03c2
+label.activity.completion  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
+error.min.post.char.less  =\u039f \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03c7\u03b1\u03c1\u03b1\u03ba\u03c4\u03ae\u03c1\u03c9\u03bd \u03b1\u03bd\u03ac \u03b4\u03b7\u03bc\u03bf\u03c3\u03af\u03b5\u03c5\u03c3\u03b7 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03b5\u03b3\u03b1\u03bb\u03cd\u03c4\u03b5\u03c1\u03b7 \u03b1\u03c0\u03cc \u03c4\u03b7\u03bd \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03b7.
+error.min.rate.less.max  =\u039f \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03b5\u03b3\u03b1\u03bb\u03cd\u03c4\u03b5\u03c1\u03bf\u03c2 \u03b1\u03c0\u03cc \u03c4\u03bf\u03bd \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf.
+js.error.validate.posting.number  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03c3\u03c4\u03bf \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf \u03ae/\u03ba\u03b1\u03b9 \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf \u03b4\u03b7\u03bc\u03bf\u03c3\u03b9\u03b5\u03cd\u03c3\u03b5\u03c9\u03bd. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03bf\u03cd\u03bc\u03b5 \u03b5\u03bb\u03ad\u03b3\u03be\u03c4\u03b5 \u03ba\u03b1\u03b9 \u03c0\u03c1\u03bf\u03c3\u03c0\u03b1\u03b8\u03ae\u03c3\u03c4\u03b5 \u03be\u03b1\u03bd\u03ac.
+js.error.validate.reply.number  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03bc\u03b5 \u03c4\u03bf \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf \u03ae/\u03ba\u03b1\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc \u03c4\u03c9\u03bd \u03b4\u03b7\u03bc\u03bf\u03c3\u03b9\u03b5\u03cd\u03c3\u03b5\u03c9\u03bd/\u03c5\u03c0\u03bf\u03b2\u03bf\u03bb\u03ce\u03bd \u03b1\u03bd\u03ac \u03bd\u03ae\u03bc\u03b1.
+label.topics  =\u0398\u03ad\u03bc\u03b1\u03c4\u03b1
 
 
-#======= End labels: Exported 232 labels for el GR =====
+#======= End labels: Exported 236 labels for el GR =====
