--- a/lams_tool_images/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 00:00:22 CST 2017 
  
 #=================== labels for Image Gallery =================# 
 
@@ -99,12 +99,8 @@ message.monitoring.edit.activity.not.editable  =\u0391\u03c5\u03c4\u03ae \u03b7 
 output.desc.learner.number.of.images.uploaded  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03b5\u03b9\u03ba\u03cc\u03bd\u03c9\u03bd \u03c0\u03bf\u03c5 \u03b1\u03bd\u03ad\u03b2\u03b7\u03ba\u03b1\u03bd \u03b1\u03c0\u03bf \u03c4\u03bf \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
 output.desc.learner.number.of.comments  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03b5\u03b9\u03ba\u03cc\u03bd\u03c9\u03bd \u03c0\u03bf\u03c5 \u03c3\u03c7\u03bf\u03bb\u03b9\u03ac\u03c3\u03c4\u03b7\u03ba\u03b1\u03bd \u03b1\u03c0\u03bf \u03c4\u03bf \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
 output.desc.learner.number.of.votes  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03b5\u03b9\u03ba\u03cc\u03bd\u03c9\u03bd \u03c0\u03bf\u03c5 \u03b5\u03c0\u03b9\u03bb\u03ad\u03c7\u03b8\u03b7\u03ba\u03b1\u03bd \u03c9\u03c2 \u03b1\u03b3\u03b1\u03c0\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03b1\u03c0\u03bf \u03c4\u03bf \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
-export.title  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c6\u03b1\u03ba\u03bb\u03ad\u03bb\u03bf\u03c5 \u03b5\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd \u03c4\u03b7\u03c2 \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u0395\u03b9\u03ba\u03cc\u03bd\u03c9\u03bd
-error.resource.item.desc.blank  =\u03a4\u03bf \u03a3\u03c7\u03cc\u03bb\u03b9\u03bf/\u039f\u03b4\u03b7\u03b3\u03af\u03b1 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc
-error.resource.item.title.blank  =\u039f \u03c4\u03b9\u03c4\u03bb\u03bf\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc\u03c2
 error.resource.image.not.alowed.format  =\u0395\u03c0\u03b9\u03c4\u03c1\u03b5\u03c0\u03cc\u03bc\u03b5\u03bd\u03b1 \u03b5\u03af\u03b4\u03b7 \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd: gif, png, jpg
 error.resource.image.not.alowed.format.for  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1\u03c4\u03bf\u03c2 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7 \u03bc\u03b5\u03c4\u03b1\u03c6\u03cc\u03c1\u03c4\u03c9\u03c3\u03b7 \u03c4\u03bf\u03c5  {0}. \u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03bf\u03bd\u03c4\u03b1\u03b9 \u03bc\u03bf\u03c1\u03c6\u03ad\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd: gif, png, jpg
-error.resource.item.url.blank  =\u03a4\u03bf URL \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc.
 error.resource.item.file.blank  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc
 error.resource.image.comment.blank  =\u03a4\u03b1 \u03c3\u03c7\u03cc\u03bb\u03b9\u03b1 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03ac
 error.upload.failed  =\u0397 \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5: {0} \u03b1\u03c0\u03ad\u03c4\u03c5\u03c7\u03b5.
@@ -167,6 +163,27 @@ event.imagesubmit.body  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5
 output.desc.uploaded.images.urls  =\u0388\u03ba\u03b8\u03b5\u03c3\u03b7 \u0395\u03b9\u03ba\u03cc\u03bd\u03c9\u03bd: \u039f\u03b9 \u03b5\u03b9\u03ba\u03cc\u03bd\u03b5\u03c2 \u03c0\u03bf\u03c5 \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03bd\u03b1\u03c1\u03c4\u03b7\u03b8\u03b5\u03af \u03b1\u03c0\u03cc \u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2
 label.learning.delete.image  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03b5\u03b9\u03ba\u03cc\u03bd\u03b1\u03c2
 label.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
+label.posted.by  ={0} \u03c3\u03b5 {1}
+label.image.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03b9\u03ba\u03cc\u03bd\u03b1\u03c2
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+errors.maxfilesize  =\u0397 \u03b5\u03b9\u03ba\u03cc\u03bd\u03b1 \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
+label.rating.criterias  =\u039a\u03c1\u03b9\u03c4\u03ae\u03c1\u03b9\u03b1 \u03b1\u03be\u03b9\u03bf\u03bb\u03cc\u03b3\u03b7\u03c3\u03b7\u03c2
+label.add.criteria  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03ba\u03c1\u03b9\u03c4\u03b7\u03c1\u03af\u03c9\u03bd
+label.number.of.votes  ={0} / {1} \u03c8\u03ae\u03c6\u03bf\u03c5\u03c2
+label.rate.limits.reminder  =\u0395\u03cd\u03c1\u03bf\u03c2 \u0391\u03be\u03b9\u03bf\u03bb\u03cc\u03b3\u03b7\u03c3\u03b7\u03c2: \u0395\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03b7 {0} \u03ba\u03b1\u03b9 \u039c\u03ad\u03b3\u03b9\u03c3\u03c4\u03b7 {1}.
+label.rate.limits.topic.reminder  =\u0388\u03c7\u03b5\u03c4\u03b5 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03ae\u03c3\u03b5\u03b9 {0} \u03b5\u03b9\u03ba\u03cc\u03bd\u03b5\u03c2 \u03ae\u03b4\u03b7.
+label.rate.limits.reminder.min  =\u0398\u03b1 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b1\u03be\u03b9\u03bf\u03bb\u03bf\u03b3\u03ae\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf\u03c5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03bd {0} \u03b5\u03b9\u03ba\u03cc\u03bd\u03b5\u03c2 \u03b1\u03ba\u03cc\u03bc\u03b7.
+label.rate.limits.reminder.max  =\u039c\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\u03b5 \u03bd\u03b1 \u03b1\u03be\u03b9\u03bf\u03bb\u03bf\u03b3\u03ae\u03c3\u03b5\u03c4\u03b5 \u03bc\u03cc\u03bd\u03bf \u03ad\u03c9\u03c2 {0} \u03b5\u03b9\u03ba\u03cc\u03bd\u03b5\u03c2.
+js.warning.max.min.limit  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03c3\u03c4\u03bf \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf \u03ae/\u03ba\u03b1\u03b9   \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf\u03b1\u03be\u03b9\u03bf\u03bb\u03bf\u03b3\u03ae\u03c3\u03b5\u03c9\u03bd. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03bf\u03cd\u03bc\u03b5 \u03b5\u03bb\u03ad\u03b3\u03be\u03c4\u03b5 \u03ba\u03b1\u03b9 \u03c0\u03c1\u03bf\u03c3\u03c0\u03b1\u03b8\u03ae\u03c3\u03c4\u03b5 \u03be\u03b1\u03bd\u03ac.
+label.minimum  =\u0395\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf:
+label.maximum  =\u039c\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf:
+label.no.minimum  =\u0394\u03b5\u03bd \u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2
+label.no.maximum  =\u0394\u03b5\u03bd \u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2
+label.minimum.number.words  =\u0395\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bb\u03ad\u03be\u03b5\u03c9\u03bd
+label.average.rating  =\u039c\u03ad\u03c3\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1 {0} / {1} \u03c8\u03ae\u03c6\u03bf\u03c5\u03c2
+label.your.rating  =\u0397 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1 \u03c3\u03b1\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 {0}, \u03bc\u03ad\u03c3\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1 {1} / {2} \u03c8\u03ae\u03c6\u03bf\u03c5\u03c2
+label.comment.textarea.tip  =\u03a0\u03bb\u03b7\u03ba\u03c4\u03c1\u03bf\u03bb\u03bf\u03b3\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf \u03c3\u03c7\u03cc\u03bb\u03b9\u03cc \u03c3\u03b1\u03c2 \u03b5\u03b4\u03ce, \u03ba\u03b1\u03b9 \u03c3\u03c4\u03b7 \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1, \u03ba\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03c3\u03c4\u03bf \u03c0\u03c1\u03ac\u03c3\u03b9\u03bd\u03bf \u03c4\u03b9\u03ba
+warning.minimum.number.words  =\u039f \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03c2 \u03b1\u03c0\u03b1\u03b9\u03c4\u03bf\u03cd\u03bc\u03b5\u03bd\u03bf\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bb\u03ad\u03be\u03b5\u03c9\u03bd \u03c3\u03b5 \u03ad\u03bd\u03b1 \u03c3\u03c7\u03cc\u03bb\u03b9\u03bf \u03b5\u03af\u03bd\u03b1\u03b9 {0}
 
 
-#======= End labels: Exported 161 labels for el GR =====
+#======= End labels: Exported 178 labels for el GR =====
