--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Feb 09 21:20:19 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 00:35:56 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -737,8 +737,10 @@ tour.lesson.remove.title  =Remove Lesson
 tour.lesson.remove.content  =Remove the lesson completely. This is permanent - it cannot be undone.
 tour.end.title  =End Of Tour
 tour.end.content  =Thank you for taking the tour. To restart the tour, click the Tour button again.
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.executable  =Uploaded file is executable
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
+label.file  =File
 
-errors.maxfilesize =The uploaded file has exceeded the maximum file size limit of {0} bytes. 
 
-
-#======= End labels: Exported 731 labels for en AU =====
+#======= End labels: Exported 735 labels for en AU =====
