LDEV-4237 adding labels

--- a/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 06:04:07 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:24:05 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -242,6 +242,7 @@ error.min.rate.less.max  =The maximum number of ratings  must be greater than it
 js.error.validate.posting.number  =There is an error with the minimum and/or maximum set for postings. Please check and try again.
 js.error.validate.reply.number  =There is an error with the minimum and/or maximum number of posts per thread.
 label.topics  =Topics
+label.authoring.basic.resource.file.input  =File
 
 
-#======= End labels: Exported 236 labels for en AU =====
+#======= End labels: Exported 237 labels for en AU =====
