--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = pixlr
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:41:05 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:23:04 CST 2017 
  
 #=================== labels for Pixlr Tool =================# 
 
@@ -104,6 +104,8 @@ button.submit  =Finish
 message.no.reflection.available  =No notebook entry has been added.
 label.image.options  =Image options
 label.activity.completion  =End of activity
+errors.maxfilesize  =Uploaded file exceeded maximum size of {0}
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 
-#======= End labels: Exported 98 labels for en AU =====
+#======= End labels: Exported 100 labels for en AU =====
