--- a/lams_tool_daco/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:59:38 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:27:30 CST 2017 
  
 #=================== labels for Data Collection =================# 
 
@@ -252,6 +252,10 @@ label.search  =Search...
 label.monitoring.average.number.records.heading  =Average Number of Records
 label.activity.completion  =End of activity
 label.notifications  =Notifications
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.executable  =Uploaded file is executable
+error.attachment.must.be.image  =Allowed file formats: JPG, GIF or PNG.
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 
-#======= End labels: Exported 246 labels for en AU =====
+#======= End labels: Exported 250 labels for en AU =====
