--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 06:04:07 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:24:05 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -178,6 +178,7 @@ error.condition.duplicated.name  =Duplicated name. Please choose unique one.
 error.condition.no.questions.selected  =There are no questions selected. Please select at least one.
 error.condition  =Error creating condition.
 output.desc.topic.name.to.answers.output.definition.forum  =Posts contain certain words
+topic.name.to.answers.output.definition.forum.default.condition  =Posts to the first topic contain word "LAMS"
 textsearch.heading  =Posts that...
 textsearch.all.words  =have all these words:
 textsearch.phrase  =have this exact wording or phrase:
@@ -244,4 +245,4 @@ label.topics  =Topics
 label.authoring.basic.resource.file.input  =File
 
 
-#======= End labels: Exported 236 labels for en AU =====
+#======= End labels: Exported 237 labels for en AU =====
