--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 19 23:31:28 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:29:56 CST 2017 
  
 #=================== labels for Submit Files =================# 
 
@@ -100,7 +100,7 @@ message.left.upload.limit  =You could upload another {0} file(s).
 messsage.learner.finish.confirm  =Are you going to finish submission?
 label.edit  =Edit
 message.no.reflection.available  =No Notebook available
-error.attachment.executable  =The uploaded file can not be an executable
+error.attachment.executable  =The uploaded file is executable, please zip it before uploading.
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Submit Files, you won't be able to continue adding files.
 message.activityLocked  =The instructor has set this activity not to allow submissions after you have finished it. As you are returning to this activity, you are able to see your files but not allowed to add more.
@@ -156,6 +156,7 @@ audit.file.restore  =Instructor {0} restored file {1} uploaded by learner {2}.
 label.search  =Search...
 errors.required  ={0} is required.
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
-label.add=Add
+label.add  =Add
 
-#======= End labels: Exported 149 labels for en AU =====
+
+#======= End labels: Exported 151 labels for en AU =====
