LDEV-4237 adding labels

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 19 23:31:24 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:29:55 CST 2017 
  
 #=================== labels for Submit Files =================# 
 
@@ -156,6 +156,7 @@ audit.file.restore  =Instructor {0} recuper\u00f3 el archivo {1} cargado por alu
 label.search  =Buscar..
 errors.required  ={0} es obligatorio
 errors.maxfilesize  =El archivo subido excede el m\u00e1ximo permitido: {0}
+label.add  =Agregar
 
 
-#======= End labels: Exported 150 labels for es ES =====
+#======= End labels: Exported 151 labels for es ES =====
