--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:03:26 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:33:31 CST 2017 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -131,6 +131,9 @@ label.submit  =Finish
 label.monitoring.heading  =Common Cartridge Monitoring
 label.resource.options  =Resource options
 label.activity.completion  =End of activity
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
+error.attachment.executable  =Uploaded file is executable
+label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 
-#======= End labels: Exported 125 labels for en AU =====
+#======= End labels: Exported 128 labels for en AU =====
