LDEV-4245: Removing logo upload from login maintenance screen.

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -154,8 +154,7 @@ sysadmin.integrated.servers  =integrated server(s) in total
 sysadmin.server.add  =Add new server
 sysadmin.organisation.create  =Create one
 sysadmin.organisation.select  =Please select...
-sysadmin.login.logo  =Upload a new logo. Use a height of 90 pixels and width between 180 and 340 pixels for best effect:
-sysadmin.login.text  =Update the text under the logo on the login page:
+sysadmin.login.text  =Update the page text:
 sysadmin.headline  =System Administration
 sysadmin.config.settings.edit  =Edit configuration settings
 sysadmin.batch.temp.file.delete  =Delete old temporary files
