LDEV-4259 Add time limit feature

--- a/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
@@ -80,4 +80,12 @@ label.cant.display.faulty.pad  =This session has had problems with initializatio
 label.pad.started.fixing  =Please wait. Pad is getting recreated now.
 label.pad.fixed  =Pad has been successfully created. Please refresh the page to see its content. 
 
+label.time.limit  =Time limit (minutes)
+label.plus.one.minute  =+1 minute
+label.start.activity  =Start activity
+label.started.activity  =Activity has been started
+label.waiting.for.teacher.launch.activity  =Please, wait for a teacher to launch time limit.
+label.time.left  =Time left
+label.time.is.over  =Time is over. No more editing is allowed.
+
 #======= End labels: Exported 164 labels for en AU =====
