LDEV-4258: Protecting the export download from multiple triggers by disabling the button until the file is downloaded. Uses the new generic javascript method based on previous Peer Review download implementation. Uses a cookie to track when the file download is complete.

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -302,3 +302,4 @@ errors.maxfilesize  =File exceeds maximum file size {0}
 
 
 #======= End labels: Exported 293 labels for en AU =====
+label.summary.downloaded=Summary downloaded
