LDEV-4258: Protecting the export download and whole of session student email generation from multiple triggers by disabling the button. The existing file download code was made generic and moved to lams_common.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -160,3 +160,4 @@ error.unable.save.comments=Unable to save comments
 label.show.ratings.left.by.user  =After completion, show feedback left for other students
 label.ratings.by.others  =Ratings left for you
 label.rating.rank=Rank
+label.file.downloaded=Spreadsheet downloaded
