LDEV-4258: Protecting the export download from multiple triggers by disabling the button until the file is downloaded. Uses the new generic javascript method based on previous Peer Review download implementation. Uses a cookie to track when the file download is complete.

--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -201,6 +201,6 @@ label.tool.output  =Tool output
 label.tool.output.has.been.changed  =Tool output has changed
 label.operation.failed  =Operation failed
 answers.submitted.none  =Select at least one answer for each of the questions.
-
+label.summary.downloaded=Marks file downloaded.
 
 #======= End labels: Exported 195 labels for en AU =====
