--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -201,6 +201,6 @@ label.waiting.for.leader.launch.time.limit  =Leader has not started the activity
 label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired. Please wait until a group leader submits notebook.
 label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
 label.authoring.advanced.shuffle.items  =Shuffle questions
-
+label.summary.downloaded=Excel file downloaded.
 
 #======= End labels: Exported 195 labels for en AU =====
