LDEV-4258: Protecting the export download from multiple triggers by disabling the button until the file is downloaded. Uses the new generic javascript method based on previous Peer Review download implementation. Uses a cookie to track when the file download is complete.

--- a/lams_tool_survey/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources.properties
@@ -182,6 +182,6 @@ label.answer.required  =Answer required
 label.survey.options  =Options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
-
+label.summary.downloaded=Report Downloaded
 
 #======= End labels: Exported 177 labels for en AU =====
