LDEV-4258 adding labels

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:26:52 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:08:23 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -299,6 +299,7 @@ warn.mark.hedging.wrong.justification  =Justification cannot be left blank
 error.import.file.format  =The import file is not an .xml file.
 label.file  =File
 errors.maxfilesize  =File exceeds maximum file size {0}
+label.summary.downloaded  =Summary downloaded
 
 
-#======= End labels: Exported 293 labels for en AU =====
+#======= End labels: Exported 294 labels for en AU =====
