--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 05:05:03 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:04:59 CST 2017 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -201,6 +201,7 @@ label.tool.output  =Tool output
 label.tool.output.has.been.changed  =Tool output has changed
 label.operation.failed  =Operation failed
 answers.submitted.none  =Select at least one answer for each of the questions.
+label.summary.downloaded  =Marks file downloaded.
 
 
-#======= End labels: Exported 195 labels for en AU =====
+#======= End labels: Exported 196 labels for en AU =====
