--- a/lams_tool_survey/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:42:19 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:09:36 CST 2017 
  
 #=================== labels for Survey =================# 
 
@@ -183,6 +183,7 @@ label.answer.required  =Answer required
 label.survey.options  =Options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
+label.summary.downloaded=  =Report Downloaded
 
 
-#======= End labels: Exported 177 labels for en AU =====
+#======= End labels: Exported 178 labels for en AU =====
