LDEV-4124: Add label size and color.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -670,6 +670,7 @@ authoring.fla.page.prop.branching.sequences.max  =Max sequences:
 authoring.fla.page.prop.optional.activities.min  =Min activities:
 authoring.fla.page.prop.optional.activities.max  =Max activities:
 authoring.fla.page.prop.color  =Color:
+authoring.fla.page.prop.size  =Size:
 authoring.fla.page.dialog.cond.output.choose  =[ Choose Output ]
 authoring.fla.page.dialog.cond.options.choose  =[ Options ]
 authoring.fla.page.dialog.cond.greater  =Greater than or equal to
